--- a/nyzr/nyzr/Panel.xib
+++ b/nyzr/nyzr/Panel.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
@@ -131,11 +131,11 @@
                         </textFieldCell>
                     </textField>
                     <button verticalHuggingPriority="750" id="RmV-Pc-vw3">
-                        <rect key="frame" x="96" y="320" width="76" height="19"/>
+                        <rect key="frame" x="96" y="319" width="64" height="27"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <buttonCell key="cell" type="roundRect" title="Change" bezelStyle="roundedRect" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="uVf-5N-dlV">
+                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="file97" imagePosition="overlaps" alignment="center" state="on" imageScaling="proportionallyDown" inset="2" id="uVf-5N-dlV">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="cellTitle"/>
+                            <font key="font" metaFont="system"/>
                         </buttonCell>
                         <connections>
                             <action selector="changeRootDirectoryButtonPressed:" target="5" id="JDu-wm-NwN"/>
@@ -151,9 +151,9 @@
                         </textFieldCell>
                     </textField>
                     <button id="BvL-Cy-4lP">
-                        <rect key="frame" x="238" y="228" width="89" height="53"/>
+                        <rect key="frame" x="254" y="231" width="66" height="52"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <buttonCell key="cell" type="bevel" title="Add Rule" bezelStyle="regularSquare" imagePosition="overlaps" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cfJ-k5-V9e">
+                        <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" image="add45" imagePosition="overlaps" alignment="center" imageScaling="proportionallyDown" inset="2" id="cfJ-k5-V9e">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
@@ -191,7 +191,7 @@
                     <button verticalHuggingPriority="750" id="hcB-g4-VlA">
                         <rect key="frame" x="101" y="13" width="138" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <buttonCell key="cell" type="push" title="Delete Selected" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Rig-dd-Fno">
+                        <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="delete84" imagePosition="overlaps" alignment="center" imageScaling="proportionallyDown" inset="2" id="Rig-dd-Fno">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
@@ -208,6 +208,17 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
+                    <button id="m3e-12-JzR">
+                        <rect key="frame" x="296" y="313" width="44" height="38"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="round73" imagePosition="overlaps" alignment="center" state="on" imageScaling="proportionallyDown" inset="2" id="zt9-aa-S1S">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="cancelButtonPressed:" target="-2" id="BTy-Sx-k7G"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
             <connections>
@@ -256,4 +267,10 @@
             <point key="canvasLocation" x="905" y="224.5"/>
         </textField>
     </objects>
+    <resources>
+        <image name="add45" width="128" height="128"/>
+        <image name="delete84" width="485.05264282226562" height="485.05264282226562"/>
+        <image name="file97" width="485.05264282226562" height="485.05264282226562"/>
+        <image name="round73" width="485.05264282226562" height="485.05264282226562"/>
+    </resources>
 </document>
