--- a/nyzr/nyzr/Panel.xib
+++ b/nyzr/nyzr/Panel.xib
@@ -62,7 +62,7 @@
                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="rOd-z0-Y9b">
                                                             <rect key="frame" x="0.0" y="0.0" width="100" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="col1" id="8EP-zY-6kx">
+                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="center" title="col1" id="8EP-zY-6kx">
                                                                 <font key="font" metaFont="system"/>
                                                                 <color key="textColor" red="0.77647058820000003" green="0.17200254027581713" blue="0.37569220937802944" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -93,9 +93,9 @@
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="roI-6q-NXo">
-                                                            <rect key="frame" x="0.0" y="0.0" width="266" height="17"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="150" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="col2" id="stC-Tl-0qg">
+                                                            <textFieldCell key="cell" lineBreakMode="truncatingHead" sendsActionOnEndEditing="YES" alignment="center" title="col2" id="stC-Tl-0qg">
                                                                 <font key="font" metaFont="system"/>
                                                                 <color key="textColor" red="0.77647058820000003" green="0.17200254030000001" blue="0.37569220939999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -132,7 +132,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="Ed7-1U-ELP">
-                        <rect key="frame" x="70" y="228" width="190" height="22"/>
+                        <rect key="frame" x="79" y="237" width="184" height="22"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="e.g. pdf or google.com" bezelStyle="round" id="vdY-Lj-0Ys">
                             <font key="font" metaFont="system"/>
@@ -141,7 +141,7 @@
                         </textFieldCell>
                     </textField>
                     <button id="BvL-Cy-4lP">
-                        <rect key="frame" x="257" y="200" width="66" height="52"/>
+                        <rect key="frame" x="274" y="208" width="47" height="49"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" image="verified1 2" imagePosition="overlaps" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="cfJ-k5-V9e">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -152,7 +152,7 @@
                         </connections>
                     </button>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="R5O-BM-8ei">
-                        <rect key="frame" x="16" y="235" width="40" height="17"/>
+                        <rect key="frame" x="25" y="244" width="40" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Filter:" id="pEg-x7-hAw">
                             <font key="font" size="13" name="LucidaSans-Demi"/>
@@ -161,7 +161,7 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" id="Ar4-JN-K5M">
-                        <rect key="frame" x="70" y="200" width="190" height="22"/>
+                        <rect key="frame" x="79" y="209" width="184" height="22"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Docs/googlefolder" bezelStyle="round" id="JYz-SX-JpZ">
                             <font key="font" metaFont="system"/>
@@ -170,7 +170,7 @@
                         </textFieldCell>
                     </textField>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Sb9-38-fOx">
-                        <rect key="frame" x="16" y="207" width="48" height="17"/>
+                        <rect key="frame" x="25" y="216" width="48" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Folder:" id="Gkr-k2-uxU">
                             <font key="font" size="13" name="LucidaSans-Demi"/>
@@ -179,7 +179,7 @@
                         </textFieldCell>
                     </textField>
                     <button verticalHuggingPriority="750" id="hcB-g4-VlA">
-                        <rect key="frame" x="101" y="20" width="138" height="32"/>
+                        <rect key="frame" x="150" y="20" width="40" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="delete84 4" imagePosition="overlaps" alignment="center" imageScaling="proportionallyDown" inset="2" id="Rig-dd-Fno">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -190,7 +190,7 @@
                         </connections>
                     </button>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="yTx-vj-LP5">
-                        <rect key="frame" x="13" y="310" width="89" height="17"/>
+                        <rect key="frame" x="25" y="313" width="89" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Root Folder" id="Dml-ub-dPJ">
                             <font key="font" size="13" name="LucidaSans-Demi"/>
@@ -219,7 +219,7 @@
                         </textFieldCell>
                     </textField>
                     <button verticalHuggingPriority="750" id="RmV-Pc-vw3">
-                        <rect key="frame" x="273" y="272" width="30" height="30"/>
+                        <rect key="frame" x="280" y="272" width="30" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="file97 3" imagePosition="overlaps" alignment="center" state="on" imageScaling="proportionallyDown" inset="2" id="uVf-5N-dlV">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
